syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="PrdQueryTaUnitFlowPb";
//Generated By BrewRobot:Fri Jul 01 12:22:42 CST 2016

message PBIFE_prdquery_prdQueryTaUnitFlow{
	///ife/prdquery/prdQueryTaUnitFlow.html
	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}

	message TaUnitFlow{
		int64 id = 1;	 //,持仓ID,Long,不校验,是,
		string transferInCode = 2;	 //,transferInCode,Long,不校验,是,
		string transferOutCode = 3;	 //,transferOutCode,Long,不校验,是,
		string transferUnit = 4;	 //,划转单位,Long,不校验,是,
		string transferProductCode = 5;	 //,产品编码,Long,不校验,是,
		string transferType = 6;	 //,划转类型,Long,不校验,是,
		int64 unitId = 7;	 //,单位ID,Long,不校验,是,
		string gmtCreate = 8;	 //,gmtCreate,Long,不校验,是,
		string gmtModify = 9;	 //,gmtModify,Long,不校验,是,
		string reason = 10;	 //,原因,Long,不校验,是,
		string transferPostUnit = 11;	 //,后置持仓,Long,不校验,是,
		string productName = 12;	 //,产品名称,Long,不校验,是,
		string gmtCreateStart = 13;	 //,开始时间,Long,不校验,是,
		string gmtCreateEnd = 14;	 //,结束时间,Long,不校验,是,
		string transferTypeName = 15;	 //,划转类型,Long,不校验,是,
		string productCodeOrName = 16;	 //,产品编号或名称,Long,不校验,是,
	}


	PageInfo pageInfo = 1; //,分页信息,pageInfo,不校验,是,

	repeated TaUnitFlow taUnitFlowList = 2; //,流水列表,List,不校验,是,


}

message Ret_PBIFE_prdquery_prdQueryTaUnitFlow{
	///ife/prdquery/prdQueryTaUnitFlow.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdquery_prdQueryTaUnitFlow data=3;


}

message REQ_PBIFE_prdquery_prdQueryTaUnitFlow{
	///ife/prdquery/prdQueryTaUnitFlow.html

	string productCodeOrName = 1; //,产品编号或产品名称,String,不校验,否,

	string startDate = 2; //,开始日期yyyy-MM-dd,String,不校验,否,

	string endDate = 3; //,结束日期yyyy-MM-dd,String,不校验,否,

	string pageIndex = 4; //,当前页,String,不校验,否,

	string pageSize = 5; //,页大小,String,不校验,否,


}